finally updated bbob-biobj LaTeX templates as well, issue #1502 can therefore be closed from my viewpoint

--- a/code-postprocessing/latex-templates/templateBIOBJarticle.tex
+++ b/code-postprocessing/latex-templates/templateBIOBJarticle.tex
@@ -211,15 +211,15 @@ Tables~\ref{tab:aRTs5} and \ref{tab:aRTs20}. The experiments were performed with
 \includegraphics[width=0.25\textwidth]{pprldmany-single-functions/pprldmany_f001}&
 \includegraphics[width=0.25\textwidth]{pprldmany-single-functions/pprldmany_f002}&
 \includegraphics[width=0.25\textwidth]{pprldmany-single-functions/pprldmany_f003}&
-\includegraphics[width=0.25\textwidth]{pprldmany-single-functions/pprldmany_f004}\\[-1.8ex]
+\includegraphics[width=0.25\textwidth]{pprldmany-single-functions/pprldmany_f004}\\
 \includegraphics[width=0.25\textwidth]{pprldmany-single-functions/pprldmany_f005}&
 \includegraphics[width=0.25\textwidth]{pprldmany-single-functions/pprldmany_f006}&
 \includegraphics[width=0.25\textwidth]{pprldmany-single-functions/pprldmany_f007}&
-\includegraphics[width=0.25\textwidth]{pprldmany-single-functions/pprldmany_f008}\\[-1.8ex]
+\includegraphics[width=0.25\textwidth]{pprldmany-single-functions/pprldmany_f008}\\
 \includegraphics[width=0.25\textwidth]{pprldmany-single-functions/pprldmany_f009}&
 \includegraphics[width=0.25\textwidth]{pprldmany-single-functions/pprldmany_f010}&
 \includegraphics[width=0.25\textwidth]{pprldmany-single-functions/pprldmany_f011}&
-\includegraphics[width=0.25\textwidth]{pprldmany-single-functions/pprldmany_f012}\\[-1.8ex]
+\includegraphics[width=0.25\textwidth]{pprldmany-single-functions/pprldmany_f012}\\
 \includegraphics[width=0.25\textwidth]{pprldmany-single-functions/pprldmany_f013}&
 \includegraphics[width=0.25\textwidth]{pprldmany-single-functions/pprldmany_f014}&
 \includegraphics[width=0.25\textwidth]{pprldmany-single-functions/pprldmany_f015}&
@@ -236,19 +236,19 @@ Tables~\ref{tab:aRTs5} and \ref{tab:aRTs20}. The experiments were performed with
 \includegraphics[width=0.25\textwidth]{pprldmany-single-functions/pprldmany_f017}&
 \includegraphics[width=0.25\textwidth]{pprldmany-single-functions/pprldmany_f018}&
 \includegraphics[width=0.25\textwidth]{pprldmany-single-functions/pprldmany_f019}&
-\includegraphics[width=0.25\textwidth]{pprldmany-single-functions/pprldmany_f020}\\[-1.8ex]
+\includegraphics[width=0.25\textwidth]{pprldmany-single-functions/pprldmany_f020}\\
 \includegraphics[width=0.25\textwidth]{pprldmany-single-functions/pprldmany_f021}&
 \includegraphics[width=0.25\textwidth]{pprldmany-single-functions/pprldmany_f022}&
 \includegraphics[width=0.25\textwidth]{pprldmany-single-functions/pprldmany_f023}&
-\includegraphics[width=0.25\textwidth]{pprldmany-single-functions/pprldmany_f024}\\[-1.8ex]
+\includegraphics[width=0.25\textwidth]{pprldmany-single-functions/pprldmany_f024}\\
 \includegraphics[width=0.25\textwidth]{pprldmany-single-functions/pprldmany_f025}&
 \includegraphics[width=0.25\textwidth]{pprldmany-single-functions/pprldmany_f026}&
 \includegraphics[width=0.25\textwidth]{pprldmany-single-functions/pprldmany_f027}&
-\includegraphics[width=0.25\textwidth]{pprldmany-single-functions/pprldmany_f028}\\[-1.8ex]
+\includegraphics[width=0.25\textwidth]{pprldmany-single-functions/pprldmany_f028}\\
 \includegraphics[width=0.25\textwidth]{pprldmany-single-functions/pprldmany_f029}&
 \includegraphics[width=0.25\textwidth]{pprldmany-single-functions/pprldmany_f030}&
 \includegraphics[width=0.25\textwidth]{pprldmany-single-functions/pprldmany_f031}&
-\includegraphics[width=0.25\textwidth]{pprldmany-single-functions/pprldmany_f032}\\[-1.8ex]
+\includegraphics[width=0.25\textwidth]{pprldmany-single-functions/pprldmany_f032}\\
 \includegraphics[width=0.25\textwidth]{pprldmany-single-functions/pprldmany_f033}&
 \includegraphics[width=0.25\textwidth]{pprldmany-single-functions/pprldmany_f034}&
 \includegraphics[width=0.25\textwidth]{pprldmany-single-functions/pprldmany_f035}&
@@ -272,15 +272,15 @@ Tables~\ref{tab:aRTs5} and \ref{tab:aRTs20}. The experiments were performed with
 \includegraphics[width=0.25\textwidth]{pprldmany-single-functions/pprldmany_f037}&
 \includegraphics[width=0.25\textwidth]{pprldmany-single-functions/pprldmany_f038}&
 \includegraphics[width=0.25\textwidth]{pprldmany-single-functions/pprldmany_f039}&
-\includegraphics[width=0.25\textwidth]{pprldmany-single-functions/pprldmany_f040}\\[-1.8ex]
+\includegraphics[width=0.25\textwidth]{pprldmany-single-functions/pprldmany_f040}\\
 \includegraphics[width=0.25\textwidth]{pprldmany-single-functions/pprldmany_f041}&
 \includegraphics[width=0.25\textwidth]{pprldmany-single-functions/pprldmany_f042}&
 \includegraphics[width=0.25\textwidth]{pprldmany-single-functions/pprldmany_f043}&
-\includegraphics[width=0.25\textwidth]{pprldmany-single-functions/pprldmany_f044}\\[-1.8ex]
+\includegraphics[width=0.25\textwidth]{pprldmany-single-functions/pprldmany_f044}\\
 \includegraphics[width=0.25\textwidth]{pprldmany-single-functions/pprldmany_f045}&
 \includegraphics[width=0.25\textwidth]{pprldmany-single-functions/pprldmany_f046}&
 \includegraphics[width=0.25\textwidth]{pprldmany-single-functions/pprldmany_f047}&
-\includegraphics[width=0.25\textwidth]{pprldmany-single-functions/pprldmany_f048}\\[-1.8ex]
+\includegraphics[width=0.25\textwidth]{pprldmany-single-functions/pprldmany_f048}\\
 \includegraphics[width=0.25\textwidth]{pprldmany-single-functions/pprldmany_f049}&
 \includegraphics[width=0.25\textwidth]{pprldmany-single-functions/pprldmany_f050}&
 \includegraphics[width=0.25\textwidth]{pprldmany-single-functions/pprldmany_f051}&
@@ -316,27 +316,27 @@ Tables~\ref{tab:aRTs5} and \ref{tab:aRTs20}. The experiments were performed with
   \begin{rotate}{90}\hspace{#1em}#2
   \end{rotate}}
 \begin{figure*}
-\begin{tabular}{c@{\hspace*{-0.02\textwidth}}c@{\hspace*{-0.02\textwidth}}c@{\hspace*{-0.02\textwidth}}c}
+\begin{tabular}{c@{\hspace*{-0.00\textwidth}}c@{\hspace*{-0.00\textwidth}}c@{\hspace*{-0.00\textwidth}}c}
 separable-separable & separable-moderate & separable-ill-cond. & separable-multimodal\\
-\includegraphics[width=0.268\textwidth,trim=0 0 0 13mm, clip]{pprldmany-single-functions/pprldmany_1-separable_1-separable} &
-\includegraphics[width=0.268\textwidth,trim=0 0 0 13mm, clip]{pprldmany-single-functions/pprldmany_1-separable_2-moderate} &
-\includegraphics[width=0.268\textwidth,trim=0 0 0 13mm, clip]{pprldmany-single-functions/pprldmany_1-separable_3-ill-conditioned} &
-\includegraphics[width=0.268\textwidth,trim=0 0 0 13mm, clip]{pprldmany-single-functions/pprldmany_1-separable_4-multi-modal}\\
+\includegraphics[width=0.24\textwidth]{pprldmany-single-functions/pprldmany_1-separable_1-separable} &
+\includegraphics[width=0.24\textwidth]{pprldmany-single-functions/pprldmany_1-separable_2-moderate} &
+\includegraphics[width=0.24\textwidth]{pprldmany-single-functions/pprldmany_1-separable_3-ill-conditioned} &
+\includegraphics[width=0.24\textwidth]{pprldmany-single-functions/pprldmany_1-separable_4-multi-modal}\\
 separable-weakstructure & moderate-moderate & moderate-ill-cond. & moderate-multimodal\\
-\includegraphics[width=0.268\textwidth,trim=0 0 0 13mm, clip]{pprldmany-single-functions/pprldmany_1-separable_5-weakly-structured} &
-\includegraphics[width=0.268\textwidth,trim=0 0 0 13mm, clip]{pprldmany-single-functions/pprldmany_2-moderate_2-moderate} &
-\includegraphics[width=0.268\textwidth,trim=0 0 0 13mm, clip]{pprldmany-single-functions/pprldmany_2-moderate_3-ill-conditioned} &
-\includegraphics[width=0.268\textwidth,trim=0 0 0 13mm, clip]{pprldmany-single-functions/pprldmany_2-moderate_4-multi-modal}\\
+\includegraphics[width=0.24\textwidth]{pprldmany-single-functions/pprldmany_1-separable_5-weakly-structured} &
+\includegraphics[width=0.24\textwidth]{pprldmany-single-functions/pprldmany_2-moderate_2-moderate} &
+\includegraphics[width=0.24\textwidth]{pprldmany-single-functions/pprldmany_2-moderate_3-ill-conditioned} &
+\includegraphics[width=0.24\textwidth]{pprldmany-single-functions/pprldmany_2-moderate_4-multi-modal}\\
 moderate-weakstructure & ill-cond.-ill-cond. & ill-cond.-multimodal & ill-cond.-weakstructure\\
-\includegraphics[width=0.268\textwidth,trim=0 0 0 13mm, clip]{pprldmany-single-functions/pprldmany_2-moderate_5-weakly-structured} &
-\includegraphics[width=0.268\textwidth,trim=0 0 0 13mm, clip]{pprldmany-single-functions/pprldmany_3-ill-conditioned_3-ill-conditioned} &
-\includegraphics[width=0.268\textwidth,trim=0 0 0 13mm, clip]{pprldmany-single-functions/pprldmany_3-ill-conditioned_4-multi-modal} &
-\includegraphics[width=0.268\textwidth,trim=0 0 0 13mm, clip]{pprldmany-single-functions/pprldmany_3-ill-conditioned_5-weakly-structured} \\
+\includegraphics[width=0.24\textwidth]{pprldmany-single-functions/pprldmany_2-moderate_5-weakly-structured} &
+\includegraphics[width=0.24\textwidth]{pprldmany-single-functions/pprldmany_3-ill-conditioned_3-ill-conditioned} &
+\includegraphics[width=0.24\textwidth]{pprldmany-single-functions/pprldmany_3-ill-conditioned_4-multi-modal} &
+\includegraphics[width=0.24\textwidth]{pprldmany-single-functions/pprldmany_3-ill-conditioned_5-weakly-structured} \\
 multimodal-multimodal & multimodal-weakstructure & weakstructure-weakstructure & all 55 functions\\
-\includegraphics[width=0.268\textwidth,trim=0 0 0 13mm, clip]{pprldmany-single-functions/pprldmany_4-multi-modal_4-multi-modal} &
-\includegraphics[width=0.268\textwidth,trim=0 0 0 13mm, clip]{pprldmany-single-functions/pprldmany_4-multi-modal_5-weakly-structured} &
-\includegraphics[width=0.268\textwidth,trim=0 0 0 13mm, clip]{pprldmany-single-functions/pprldmany_5-weakly-structured_5-weakly-structured} &
-\includegraphics[width=0.268\textwidth,trim=0 0 0 13mm, clip]{pprldmany-single-functions/pprldmany}
+\includegraphics[width=0.24\textwidth]{pprldmany-single-functions/pprldmany_4-multi-modal_4-multi-modal} &
+\includegraphics[width=0.24\textwidth]{pprldmany-single-functions/pprldmany_4-multi-modal_5-weakly-structured} &
+\includegraphics[width=0.24\textwidth]{pprldmany-single-functions/pprldmany_5-weakly-structured_5-weakly-structured} &
+\includegraphics[width=0.24\textwidth]{pprldmany-single-functions/pprldmany}
 \vspace*{-0.5ex}
 \end{tabular}
  \caption{\label{fig:ECDFsGroups}
@@ -670,37 +670,37 @@ multimodal-multimodal & multimodal-weakstructure & weakstructure-weakstructure &
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \begin{figure*}
-\begin{tabular}{@{\hspace*{-0.018\textwidth}}l@{\hspace*{-0.02\textwidth}}l@{\hspace*{-0.02\textwidth}}l@{\hspace*{-0.02\textwidth}}l@{\hspace*{-0.02\textwidth}}l@{\hspace*{-0.02\textwidth}}}
-\includegraphics[width=0.223\textwidth]{ppfigdim_f001}&
-\includegraphics[width=0.223\textwidth]{ppfigdim_f002}&
-\includegraphics[width=0.223\textwidth]{ppfigdim_f003}&
-\includegraphics[width=0.223\textwidth]{ppfigdim_f004}&
-\includegraphics[width=0.223\textwidth]{ppfigdim_f005}\\[-1.8ex]
-\includegraphics[width=0.223\textwidth]{ppfigdim_f006}&
-\includegraphics[width=0.223\textwidth]{ppfigdim_f007}&
-\includegraphics[width=0.223\textwidth]{ppfigdim_f008}&
-\includegraphics[width=0.223\textwidth]{ppfigdim_f009}&
-\includegraphics[width=0.223\textwidth]{ppfigdim_f010}\\[-1.8ex]
-\includegraphics[width=0.223\textwidth]{ppfigdim_f011}&
-\includegraphics[width=0.223\textwidth]{ppfigdim_f012}&
-\includegraphics[width=0.223\textwidth]{ppfigdim_f013}&
-\includegraphics[width=0.223\textwidth]{ppfigdim_f014}&
-\includegraphics[width=0.223\textwidth]{ppfigdim_f015}\\[-1.8ex]
-\includegraphics[width=0.223\textwidth]{ppfigdim_f016}&
-\includegraphics[width=0.223\textwidth]{ppfigdim_f017}&
-\includegraphics[width=0.223\textwidth]{ppfigdim_f018}&
-\includegraphics[width=0.223\textwidth]{ppfigdim_f019}&
-\includegraphics[width=0.223\textwidth]{ppfigdim_f020}\\[-1.8ex]
-\includegraphics[width=0.223\textwidth]{ppfigdim_f021}&
-\includegraphics[width=0.223\textwidth]{ppfigdim_f022}&
-\includegraphics[width=0.223\textwidth]{ppfigdim_f023}&
-\includegraphics[width=0.223\textwidth]{ppfigdim_f024}&
-\includegraphics[width=0.223\textwidth]{ppfigdim_f025}\\[-1.8ex]
-\includegraphics[width=0.223\textwidth]{ppfigdim_f026}&
-\includegraphics[width=0.223\textwidth]{ppfigdim_f027}&
-\includegraphics[width=0.223\textwidth]{ppfigdim_f028}&
-\includegraphics[width=0.223\textwidth]{ppfigdim_f029}&
-\includegraphics[width=0.223\textwidth]{ppfigdim_f030}
+\begin{tabular}{@{\hspace*{-0.0\textwidth}}l@{\hspace*{-0.0\textwidth}}l@{\hspace*{-0.0\textwidth}}l@{\hspace*{-0.0\textwidth}}l@{\hspace*{-0.0\textwidth}}l@{\hspace*{-0.0\textwidth}}}
+\includegraphics[width=0.2\textwidth]{ppfigdim_f001}&
+\includegraphics[width=0.2\textwidth]{ppfigdim_f002}&
+\includegraphics[width=0.2\textwidth]{ppfigdim_f003}&
+\includegraphics[width=0.2\textwidth]{ppfigdim_f004}&
+\includegraphics[width=0.2\textwidth]{ppfigdim_f005}\\
+\includegraphics[width=0.2\textwidth]{ppfigdim_f006}&
+\includegraphics[width=0.2\textwidth]{ppfigdim_f007}&
+\includegraphics[width=0.2\textwidth]{ppfigdim_f008}&
+\includegraphics[width=0.2\textwidth]{ppfigdim_f009}&
+\includegraphics[width=0.2\textwidth]{ppfigdim_f010}\\
+\includegraphics[width=0.2\textwidth]{ppfigdim_f011}&
+\includegraphics[width=0.2\textwidth]{ppfigdim_f012}&
+\includegraphics[width=0.2\textwidth]{ppfigdim_f013}&
+\includegraphics[width=0.2\textwidth]{ppfigdim_f014}&
+\includegraphics[width=0.2\textwidth]{ppfigdim_f015}\\
+\includegraphics[width=0.2\textwidth]{ppfigdim_f016}&
+\includegraphics[width=0.2\textwidth]{ppfigdim_f017}&
+\includegraphics[width=0.2\textwidth]{ppfigdim_f018}&
+\includegraphics[width=0.2\textwidth]{ppfigdim_f019}&
+\includegraphics[width=0.2\textwidth]{ppfigdim_f020}\\
+\includegraphics[width=0.2\textwidth]{ppfigdim_f021}&
+\includegraphics[width=0.2\textwidth]{ppfigdim_f022}&
+\includegraphics[width=0.2\textwidth]{ppfigdim_f023}&
+\includegraphics[width=0.2\textwidth]{ppfigdim_f024}&
+\includegraphics[width=0.2\textwidth]{ppfigdim_f025}\\
+\includegraphics[width=0.2\textwidth]{ppfigdim_f026}&
+\includegraphics[width=0.2\textwidth]{ppfigdim_f027}&
+\includegraphics[width=0.2\textwidth]{ppfigdim_f028}&
+\includegraphics[width=0.2\textwidth]{ppfigdim_f029}&
+\includegraphics[width=0.2\textwidth]{ppfigdim_f030}
 \end{tabular}
 \vspace{-3ex}
  \caption{\label{fig:aRTgraphs}
@@ -710,32 +710,32 @@ multimodal-multimodal & multimodal-weakstructure & weakstructure-weakstructure &
 
 
 \begin{figure*}
-\begin{tabular}{@{\hspace*{-0.018\textwidth}}l@{\hspace*{-0.02\textwidth}}l@{\hspace*{-0.02\textwidth}}l@{\hspace*{-0.02\textwidth}}l@{\hspace*{-0.02\textwidth}}l@{\hspace*{-0.02\textwidth}}}
-\includegraphics[width=0.223\textwidth]{ppfigdim_f031}&
-\includegraphics[width=0.223\textwidth]{ppfigdim_f032}&
-\includegraphics[width=0.223\textwidth]{ppfigdim_f033}&
-\includegraphics[width=0.223\textwidth]{ppfigdim_f034}&
-\includegraphics[width=0.223\textwidth]{ppfigdim_f035}\\[-1.8ex]
-\includegraphics[width=0.223\textwidth]{ppfigdim_f036}&
-\includegraphics[width=0.223\textwidth]{ppfigdim_f037}&
-\includegraphics[width=0.223\textwidth]{ppfigdim_f038}&
-\includegraphics[width=0.223\textwidth]{ppfigdim_f039}&
-\includegraphics[width=0.223\textwidth]{ppfigdim_f040}\\[-1.8ex]
-\includegraphics[width=0.223\textwidth]{ppfigdim_f041}&
-\includegraphics[width=0.223\textwidth]{ppfigdim_f042}&
-\includegraphics[width=0.223\textwidth]{ppfigdim_f043}&
-\includegraphics[width=0.223\textwidth]{ppfigdim_f044}&
-\includegraphics[width=0.223\textwidth]{ppfigdim_f045}\\[-1.8ex]
-\includegraphics[width=0.223\textwidth]{ppfigdim_f046}&
-\includegraphics[width=0.223\textwidth]{ppfigdim_f047}&
-\includegraphics[width=0.223\textwidth]{ppfigdim_f048}&
-\includegraphics[width=0.223\textwidth]{ppfigdim_f049}&
-\includegraphics[width=0.223\textwidth]{ppfigdim_f050}\\[-1.8ex]
-\includegraphics[width=0.223\textwidth]{ppfigdim_f051}&
-\includegraphics[width=0.223\textwidth]{ppfigdim_f052}&
-\includegraphics[width=0.223\textwidth]{ppfigdim_f053}&
-\includegraphics[width=0.223\textwidth]{ppfigdim_f054}&
-\includegraphics[width=0.223\textwidth]{ppfigdim_f055}
+\begin{tabular}{@{\hspace*{-0.0\textwidth}}l@{\hspace*{-0.0\textwidth}}l@{\hspace*{-0.0\textwidth}}l@{\hspace*{-0.0\textwidth}}l@{\hspace*{-0.0\textwidth}}l@{\hspace*{-0.0\textwidth}}}
+\includegraphics[width=0.2\textwidth]{ppfigdim_f031}&
+\includegraphics[width=0.2\textwidth]{ppfigdim_f032}&
+\includegraphics[width=0.2\textwidth]{ppfigdim_f033}&
+\includegraphics[width=0.2\textwidth]{ppfigdim_f034}&
+\includegraphics[width=0.2\textwidth]{ppfigdim_f035}\\
+\includegraphics[width=0.2\textwidth]{ppfigdim_f036}&
+\includegraphics[width=0.2\textwidth]{ppfigdim_f037}&
+\includegraphics[width=0.2\textwidth]{ppfigdim_f038}&
+\includegraphics[width=0.2\textwidth]{ppfigdim_f039}&
+\includegraphics[width=0.2\textwidth]{ppfigdim_f040}\\
+\includegraphics[width=0.2\textwidth]{ppfigdim_f041}&
+\includegraphics[width=0.2\textwidth]{ppfigdim_f042}&
+\includegraphics[width=0.2\textwidth]{ppfigdim_f043}&
+\includegraphics[width=0.2\textwidth]{ppfigdim_f044}&
+\includegraphics[width=0.2\textwidth]{ppfigdim_f045}\\
+\includegraphics[width=0.2\textwidth]{ppfigdim_f046}&
+\includegraphics[width=0.2\textwidth]{ppfigdim_f047}&
+\includegraphics[width=0.2\textwidth]{ppfigdim_f048}&
+\includegraphics[width=0.2\textwidth]{ppfigdim_f049}&
+\includegraphics[width=0.2\textwidth]{ppfigdim_f050}\\
+\includegraphics[width=0.2\textwidth]{ppfigdim_f051}&
+\includegraphics[width=0.2\textwidth]{ppfigdim_f052}&
+\includegraphics[width=0.2\textwidth]{ppfigdim_f053}&
+\includegraphics[width=0.2\textwidth]{ppfigdim_f054}&
+\includegraphics[width=0.2\textwidth]{ppfigdim_f055}
 \end{tabular}
 \vspace{-3ex}
  \caption{\label{fig:aRTgraphsTwo}
