--- a/code-postprocessing/latex-templates/templateBIOBJmultiple.tex
+++ b/code-postprocessing/latex-templates/templateBIOBJmultiple.tex
@@ -244,47 +244,42 @@ unsuccessful trial under consideration.
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \begin{figure*}
 \centering
-\begin{tabular}{@{\hspace*{-0.005\textwidth}}l@{\hspace*{-0.005\textwidth}}l@{\hspace*{-0.005\textwidth}}l@{\hspace*{-0.005\textwidth}}l@{\hspace*{-0.005\textwidth}}l@{\hspace*{-0.005\textwidth}}}
+\begin{tabular}{@{\hspace*{-0.00\textwidth}}l@{\hspace*{-0.00\textwidth}}l@{\hspace*{-0.00\textwidth}}l@{\hspace*{-0.00\textwidth}}l@{\hspace*{-0.00\textwidth}}l@{\hspace*{-0.00\textwidth}}}
 \includegraphics[width=0.2\textwidth]{pprldmany-single-functions/pprldmany_f001_10D}&
 \includegraphics[width=0.2\textwidth]{pprldmany-single-functions/pprldmany_f002_10D}&
 \includegraphics[width=0.2\textwidth]{pprldmany-single-functions/pprldmany_f003_10D}&
 \includegraphics[width=0.2\textwidth]{pprldmany-single-functions/pprldmany_f004_10D}&
-\includegraphics[width=0.2\textwidth]{pprldmany-single-functions/pprldmany_f005_10D}\\[-1.8ex]
+\includegraphics[width=0.2\textwidth]{pprldmany-single-functions/pprldmany_f005_10D}\\
 \includegraphics[width=0.2\textwidth]{pprldmany-single-functions/pprldmany_f006_10D}&
 \includegraphics[width=0.2\textwidth]{pprldmany-single-functions/pprldmany_f007_10D}&
 \includegraphics[width=0.2\textwidth]{pprldmany-single-functions/pprldmany_f008_10D}&
 \includegraphics[width=0.2\textwidth]{pprldmany-single-functions/pprldmany_f009_10D}&
-\includegraphics[width=0.2\textwidth]{pprldmany-single-functions/pprldmany_f010_10D}\\[-1.8ex]
+\includegraphics[width=0.2\textwidth]{pprldmany-single-functions/pprldmany_f010_10D}\\
 \includegraphics[width=0.2\textwidth]{pprldmany-single-functions/pprldmany_f011_10D}&
 \includegraphics[width=0.2\textwidth]{pprldmany-single-functions/pprldmany_f012_10D}&
 \includegraphics[width=0.2\textwidth]{pprldmany-single-functions/pprldmany_f013_10D}&
 \includegraphics[width=0.2\textwidth]{pprldmany-single-functions/pprldmany_f014_10D}&
-\includegraphics[width=0.2\textwidth]{pprldmany-single-functions/pprldmany_f015_10D}\\[-1.8ex]
+\includegraphics[width=0.2\textwidth]{pprldmany-single-functions/pprldmany_f015_10D}\\
 \includegraphics[width=0.2\textwidth]{pprldmany-single-functions/pprldmany_f016_10D}&
 \includegraphics[width=0.2\textwidth]{pprldmany-single-functions/pprldmany_f017_10D}&
 \includegraphics[width=0.2\textwidth]{pprldmany-single-functions/pprldmany_f018_10D}&
 \includegraphics[width=0.2\textwidth]{pprldmany-single-functions/pprldmany_f019_10D}&
-\includegraphics[width=0.2\textwidth]{pprldmany-single-functions/pprldmany_f020_10D}\\[-1.8ex]
+\includegraphics[width=0.2\textwidth]{pprldmany-single-functions/pprldmany_f020_10D}\\
 \includegraphics[width=0.2\textwidth]{pprldmany-single-functions/pprldmany_f021_10D}&
 \includegraphics[width=0.2\textwidth]{pprldmany-single-functions/pprldmany_f022_10D}&
 \includegraphics[width=0.2\textwidth]{pprldmany-single-functions/pprldmany_f023_10D}&
 \includegraphics[width=0.2\textwidth]{pprldmany-single-functions/pprldmany_f024_10D}&
-\includegraphics[width=0.2\textwidth]{pprldmany-single-functions/pprldmany_f025_10D}\\[-1.8ex]
+\includegraphics[width=0.2\textwidth]{pprldmany-single-functions/pprldmany_f025_10D}\\
 \includegraphics[width=0.2\textwidth]{pprldmany-single-functions/pprldmany_f026_10D}&
 \includegraphics[width=0.2\textwidth]{pprldmany-single-functions/pprldmany_f027_10D}&
 \includegraphics[width=0.2\textwidth]{pprldmany-single-functions/pprldmany_f028_10D}&
 \includegraphics[width=0.2\textwidth]{pprldmany-single-functions/pprldmany_f029_10D}&
-\includegraphics[width=0.2\textwidth]{pprldmany-single-functions/pprldmany_f030_10D}\\[-1.8ex]
+\includegraphics[width=0.2\textwidth]{pprldmany-single-functions/pprldmany_f030_10D}\\
 \includegraphics[width=0.2\textwidth]{pprldmany-single-functions/pprldmany_f031_10D}&
 \includegraphics[width=0.2\textwidth]{pprldmany-single-functions/pprldmany_f032_10D}&
 \includegraphics[width=0.2\textwidth]{pprldmany-single-functions/pprldmany_f033_10D}&
 \includegraphics[width=0.2\textwidth]{pprldmany-single-functions/pprldmany_f034_10D}&
 \includegraphics[width=0.2\textwidth]{pprldmany-single-functions/pprldmany_f035_10D}\\[-1.8ex]
-\includegraphics[width=0.2\textwidth]{pprldmany-single-functions/pprldmany_f036_10D}&
-\includegraphics[width=0.2\textwidth]{pprldmany-single-functions/pprldmany_f037_10D}&
-\includegraphics[width=0.2\textwidth]{pprldmany-single-functions/pprldmany_f038_10D}&
-\includegraphics[width=0.2\textwidth]{pprldmany-single-functions/pprldmany_f039_10D}&
-\includegraphics[width=0.2\textwidth]{pprldmany-single-functions/pprldmany_f040_10D}\\[-1.8ex]
 \end{tabular}
  \caption{\label{fig:ECDFsingleOne}
 	\bbobecdfcaptionsinglefunctionssingledim{10}
@@ -293,17 +288,22 @@ unsuccessful trial under consideration.
 
 \begin{figure*}
 \centering
-\begin{tabular}{@{\hspace*{-0.005\textwidth}}l@{\hspace*{-0.005\textwidth}}l@{\hspace*{-0.005\textwidth}}l@{\hspace*{-0.005\textwidth}}l@{\hspace*{-0.005\textwidth}}l@{\hspace*{-0.005\textwidth}}}
+\begin{tabular}{@{\hspace*{-0.00\textwidth}}l@{\hspace*{-0.00\textwidth}}l@{\hspace*{-0.00\textwidth}}l@{\hspace*{-0.00\textwidth}}l@{\hspace*{-0.00\textwidth}}l@{\hspace*{-0.00\textwidth}}}
+\includegraphics[width=0.2\textwidth]{pprldmany-single-functions/pprldmany_f036_10D}&
+\includegraphics[width=0.2\textwidth]{pprldmany-single-functions/pprldmany_f037_10D}&
+\includegraphics[width=0.2\textwidth]{pprldmany-single-functions/pprldmany_f038_10D}&
+\includegraphics[width=0.2\textwidth]{pprldmany-single-functions/pprldmany_f039_10D}&
+\includegraphics[width=0.2\textwidth]{pprldmany-single-functions/pprldmany_f040_10D}\\
 \includegraphics[width=0.2\textwidth]{pprldmany-single-functions/pprldmany_f041_10D}&
 \includegraphics[width=0.2\textwidth]{pprldmany-single-functions/pprldmany_f042_10D}&
 \includegraphics[width=0.2\textwidth]{pprldmany-single-functions/pprldmany_f043_10D}&
 \includegraphics[width=0.2\textwidth]{pprldmany-single-functions/pprldmany_f044_10D}&
-\includegraphics[width=0.2\textwidth]{pprldmany-single-functions/pprldmany_f045_10D}\\[-1.8ex]
+\includegraphics[width=0.2\textwidth]{pprldmany-single-functions/pprldmany_f045_10D}\\
 \includegraphics[width=0.2\textwidth]{pprldmany-single-functions/pprldmany_f046_10D}&
 \includegraphics[width=0.2\textwidth]{pprldmany-single-functions/pprldmany_f047_10D}&
 \includegraphics[width=0.2\textwidth]{pprldmany-single-functions/pprldmany_f048_10D}&
 \includegraphics[width=0.2\textwidth]{pprldmany-single-functions/pprldmany_f049_10D}&
-\includegraphics[width=0.2\textwidth]{pprldmany-single-functions/pprldmany_f040_10D}\\[-1.8ex]
+\includegraphics[width=0.2\textwidth]{pprldmany-single-functions/pprldmany_f040_10D}\\
 \includegraphics[width=0.2\textwidth]{pprldmany-single-functions/pprldmany_f051_10D}&
 \includegraphics[width=0.2\textwidth]{pprldmany-single-functions/pprldmany_f052_10D}&
 \includegraphics[width=0.2\textwidth]{pprldmany-single-functions/pprldmany_f053_10D}&
@@ -311,7 +311,7 @@ unsuccessful trial under consideration.
 \includegraphics[width=0.2\textwidth]{pprldmany-single-functions/pprldmany_f055_10D}\\[-1.8ex]
 \end{tabular}
  \caption{\label{fig:ECDFsingleTwo}
- Bootstrapped empirical cumulative distribution of the number of objective function evaluations divided by dimension (FEvals/DIM) as in Fig.~\ref{fig:ECDFsingleOne} but for functions $f_{41}$ to $f_{55}$ in 10-D.
+ Bootstrapped empirical cumulative distribution of the number of objective function evaluations divided by dimension (FEvals/DIM) as in Fig.~\ref{fig:ECDFsingleOne} but for functions $f_{36}$ to $f_{55}$ in 10-D.
 }
 \end{figure*}
 
@@ -326,27 +326,27 @@ unsuccessful trial under consideration.
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \begin{figure*}
-\begin{tabular}{@{\hspace*{-0.009\textwidth}}c@{\hspace*{-0.014\textwidth}}c@{\hspace*{-0.016\textwidth}}c@{\hspace*{-0.02\textwidth}}c}
+\begin{tabular}{@{\hspace*{-0.00\textwidth}}c@{\hspace*{-0.0\textwidth}}c@{\hspace*{-0.0\textwidth}}c@{\hspace*{-0.0\textwidth}}c}
 separable-separable & separable-moderate & separable-ill-cond. & separable-multimodal\\
-\includegraphics[width=0.268\textwidth,trim=0 0 0 13mm, clip]{pprldmany_05D_1-separable_1-separable} &
-\includegraphics[width=0.268\textwidth,trim=0 0 0 13mm, clip]{pprldmany_05D_1-separable_2-moderate} &
-\includegraphics[width=0.268\textwidth,trim=0 0 0 13mm, clip]{pprldmany_05D_1-separable_3-ill-conditioned} &
-\includegraphics[width=0.268\textwidth,trim=0 0 0 13mm, clip]{pprldmany_05D_1-separable_4-multi-modal}\\
+\includegraphics[width=0.24\textwidth]{pprldmany_05D_1-separable_1-separable} &
+\includegraphics[width=0.24\textwidth]{pprldmany_05D_1-separable_2-moderate} &
+\includegraphics[width=0.24\textwidth]{pprldmany_05D_1-separable_3-ill-conditioned} &
+\includegraphics[width=0.24\textwidth]{pprldmany_05D_1-separable_4-multi-modal}\\
 separable-weakstructure & moderate-moderate & moderate-ill-cond. & moderate-multimodal\\
-\includegraphics[width=0.268\textwidth,trim=0 0 0 13mm, clip]{pprldmany_05D_1-separable_5-weakly-structured} &
-\includegraphics[width=0.268\textwidth,trim=0 0 0 13mm, clip]{pprldmany_05D_2-moderate_2-moderate} &
-\includegraphics[width=0.268\textwidth,trim=0 0 0 13mm, clip]{pprldmany_05D_2-moderate_3-ill-conditioned} &
-\includegraphics[width=0.268\textwidth,trim=0 0 0 13mm, clip]{pprldmany_05D_2-moderate_4-multi-modal}\\
+\includegraphics[width=0.24\textwidth]{pprldmany_05D_1-separable_5-weakly-structured} &
+\includegraphics[width=0.24\textwidth]{pprldmany_05D_2-moderate_2-moderate} &
+\includegraphics[width=0.24\textwidth]{pprldmany_05D_2-moderate_3-ill-conditioned} &
+\includegraphics[width=0.24\textwidth]{pprldmany_05D_2-moderate_4-multi-modal}\\
 moderate-weakstructure & ill-cond.-ill-cond. & ill-cond.-multimodal & ill-cond.-weakstructure\\
-\includegraphics[width=0.268\textwidth,trim=0 0 0 13mm, clip]{pprldmany_05D_2-moderate_5-weakly-structured} &
-\includegraphics[width=0.268\textwidth,trim=0 0 0 13mm, clip]{pprldmany_05D_3-ill-conditioned_3-ill-conditioned} &
-\includegraphics[width=0.268\textwidth,trim=0 0 0 13mm, clip]{pprldmany_05D_3-ill-conditioned_4-multi-modal} &
-\includegraphics[width=0.268\textwidth,trim=0 0 0 13mm, clip]{pprldmany_05D_3-ill-conditioned_5-weakly-structured} \\
+\includegraphics[width=0.24\textwidth]{pprldmany_05D_2-moderate_5-weakly-structured} &
+\includegraphics[width=0.24\textwidth]{pprldmany_05D_3-ill-conditioned_3-ill-conditioned} &
+\includegraphics[width=0.24\textwidth]{pprldmany_05D_3-ill-conditioned_4-multi-modal} &
+\includegraphics[width=0.24\textwidth]{pprldmany_05D_3-ill-conditioned_5-weakly-structured} \\
 multimodal-multimodal & multimodal-weakstructure & weakstructure-weakstructure & all 55 functions\\
-\includegraphics[width=0.268\textwidth,trim=0 0 0 13mm, clip]{pprldmany_05D_4-multi-modal_4-multi-modal} &
-\includegraphics[width=0.268\textwidth,trim=0 0 0 13mm, clip]{pprldmany_05D_4-multi-modal_5-weakly-structured} &
-\includegraphics[width=0.268\textwidth,trim=0 0 0 13mm, clip]{pprldmany_05D_5-weakly-structured_5-weakly-structured} &
-\includegraphics[width=0.268\textwidth,trim=0 0 0 13mm, clip]{pprldmany_05D_noiselessall}
+\includegraphics[width=0.24\textwidth]{pprldmany_05D_4-multi-modal_4-multi-modal} &
+\includegraphics[width=0.24\textwidth]{pprldmany_05D_4-multi-modal_5-weakly-structured} &
+\includegraphics[width=0.24\textwidth]{pprldmany_05D_5-weakly-structured_5-weakly-structured} &
+\includegraphics[width=0.24\textwidth]{pprldmany_05D_noiselessall}
 \vspace*{-0.5ex}
 \end{tabular}
  \caption{\label{fig:ECDFsGroupsFive}
@@ -362,27 +362,27 @@ multimodal-multimodal & multimodal-weakstructure & weakstructure-weakstructure &
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \begin{figure*}
-\begin{tabular}{@{\hspace*{-0.009\textwidth}}c@{\hspace*{-0.014\textwidth}}c@{\hspace*{-0.016\textwidth}}c@{\hspace*{-0.02\textwidth}}c}
+\begin{tabular}{@{\hspace*{-0.00\textwidth}}c@{\hspace*{-0.0\textwidth}}c@{\hspace*{-0.0\textwidth}}c@{\hspace*{-0.0\textwidth}}c}
 separable-separable & separable-moderate & separable-ill-cond. & separable-multimodal\\
-\includegraphics[width=0.268\textwidth,trim=0 0 0 13mm, clip]{pprldmany_20D_1-separable_1-separable} &
-\includegraphics[width=0.268\textwidth,trim=0 0 0 13mm, clip]{pprldmany_20D_1-separable_2-moderate} &
-\includegraphics[width=0.268\textwidth,trim=0 0 0 13mm, clip]{pprldmany_20D_1-separable_3-ill-conditioned} &
-\includegraphics[width=0.268\textwidth,trim=0 0 0 13mm, clip]{pprldmany_20D_1-separable_4-multi-modal}\\
+\includegraphics[width=0.24\textwidth]{pprldmany_20D_1-separable_1-separable} &
+\includegraphics[width=0.24\textwidth]{pprldmany_20D_1-separable_2-moderate} &
+\includegraphics[width=0.24\textwidth]{pprldmany_20D_1-separable_3-ill-conditioned} &
+\includegraphics[width=0.24\textwidth]{pprldmany_20D_1-separable_4-multi-modal}\\
 separable-weakstructure & moderate-moderate & moderate-ill-cond. & moderate-multimodal\\
-\includegraphics[width=0.268\textwidth,trim=0 0 0 13mm, clip]{pprldmany_20D_1-separable_5-weakly-structured} &
-\includegraphics[width=0.268\textwidth,trim=0 0 0 13mm, clip]{pprldmany_20D_2-moderate_2-moderate} &
-\includegraphics[width=0.268\textwidth,trim=0 0 0 13mm, clip]{pprldmany_20D_2-moderate_3-ill-conditioned} &
-\includegraphics[width=0.268\textwidth,trim=0 0 0 13mm, clip]{pprldmany_20D_2-moderate_4-multi-modal}\\
+\includegraphics[width=0.24\textwidth]{pprldmany_20D_1-separable_5-weakly-structured} &
+\includegraphics[width=0.24\textwidth]{pprldmany_20D_2-moderate_2-moderate} &
+\includegraphics[width=0.24\textwidth]{pprldmany_20D_2-moderate_3-ill-conditioned} &
+\includegraphics[width=0.24\textwidth]{pprldmany_20D_2-moderate_4-multi-modal}\\
 moderate-weakstructure & ill-cond.-ill-cond. & ill-cond.-multimodal & ill-cond.-weakstructure\\
-\includegraphics[width=0.268\textwidth,trim=0 0 0 13mm, clip]{pprldmany_20D_2-moderate_5-weakly-structured} &
-\includegraphics[width=0.268\textwidth,trim=0 0 0 13mm, clip]{pprldmany_20D_3-ill-conditioned_3-ill-conditioned} &
-\includegraphics[width=0.268\textwidth,trim=0 0 0 13mm, clip]{pprldmany_20D_3-ill-conditioned_4-multi-modal} &
-\includegraphics[width=0.268\textwidth,trim=0 0 0 13mm, clip]{pprldmany_20D_3-ill-conditioned_5-weakly-structured} \\
+\includegraphics[width=0.24\textwidth]{pprldmany_20D_2-moderate_5-weakly-structured} &
+\includegraphics[width=0.24\textwidth]{pprldmany_20D_3-ill-conditioned_3-ill-conditioned} &
+\includegraphics[width=0.24\textwidth]{pprldmany_20D_3-ill-conditioned_4-multi-modal} &
+\includegraphics[width=0.24\textwidth]{pprldmany_20D_3-ill-conditioned_5-weakly-structured} \\
 multimodal-multimodal & multimodal-weakstructure & weakstructure-weakstructure & all 55 functions\\
-\includegraphics[width=0.268\textwidth,trim=0 0 0 13mm, clip]{pprldmany_20D_4-multi-modal_4-multi-modal} &
-\includegraphics[width=0.268\textwidth,trim=0 0 0 13mm, clip]{pprldmany_20D_4-multi-modal_5-weakly-structured} &
-\includegraphics[width=0.268\textwidth,trim=0 0 0 13mm, clip]{pprldmany_20D_5-weakly-structured_5-weakly-structured} &
-\includegraphics[width=0.268\textwidth,trim=0 0 0 13mm, clip]{pprldmany_20D_noiselessall}
+\includegraphics[width=0.24\textwidth]{pprldmany_20D_4-multi-modal_4-multi-modal} &
+\includegraphics[width=0.24\textwidth]{pprldmany_20D_4-multi-modal_5-weakly-structured} &
+\includegraphics[width=0.24\textwidth]{pprldmany_20D_5-weakly-structured_5-weakly-structured} &
+\includegraphics[width=0.24\textwidth]{pprldmany_20D_noiselessall}
 \vspace*{-0.5ex}
 \end{tabular}
  \caption{\label{fig:ECDFsGroupsTwenty}
@@ -726,37 +726,37 @@ The following pages present additional results that do not fit into the actual p
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \begin{figure*}
-\begin{tabular}{@{\hspace*{-0.018\textwidth}}l@{\hspace*{-0.02\textwidth}}l@{\hspace*{-0.02\textwidth}}l@{\hspace*{-0.02\textwidth}}l@{\hspace*{-0.02\textwidth}}l@{\hspace*{-0.02\textwidth}}}
-\includegraphics[width=0.223\textwidth]{ppfigs_f001}&
-\includegraphics[width=0.223\textwidth]{ppfigs_f002}&
-\includegraphics[width=0.223\textwidth]{ppfigs_f003}&
-\includegraphics[width=0.223\textwidth]{ppfigs_f004}&
-\includegraphics[width=0.223\textwidth]{ppfigs_f005}\\[-1.8ex]
-\includegraphics[width=0.223\textwidth]{ppfigs_f006}&
-\includegraphics[width=0.223\textwidth]{ppfigs_f007}&
-\includegraphics[width=0.223\textwidth]{ppfigs_f008}&
-\includegraphics[width=0.223\textwidth]{ppfigs_f009}&
-\includegraphics[width=0.223\textwidth]{ppfigs_f010}\\[-1.8ex]
-\includegraphics[width=0.223\textwidth]{ppfigs_f011}&
-\includegraphics[width=0.223\textwidth]{ppfigs_f012}&
-\includegraphics[width=0.223\textwidth]{ppfigs_f013}&
-\includegraphics[width=0.223\textwidth]{ppfigs_f014}&
-\includegraphics[width=0.223\textwidth]{ppfigs_f015}\\[-1.8ex]
-\includegraphics[width=0.223\textwidth]{ppfigs_f016}&
-\includegraphics[width=0.223\textwidth]{ppfigs_f017}&
-\includegraphics[width=0.223\textwidth]{ppfigs_f018}&
-\includegraphics[width=0.223\textwidth]{ppfigs_f019}&
-\includegraphics[width=0.223\textwidth]{ppfigs_f020}\\[-1.8ex]
-\includegraphics[width=0.223\textwidth]{ppfigs_f021}&
-\includegraphics[width=0.223\textwidth]{ppfigs_f022}&
-\includegraphics[width=0.223\textwidth]{ppfigs_f023}&
-\includegraphics[width=0.223\textwidth]{ppfigs_f024}&
-\includegraphics[width=0.223\textwidth]{ppfigs_f025}\\[-1.8ex]
-\includegraphics[width=0.223\textwidth]{ppfigs_f026}&
-\includegraphics[width=0.223\textwidth]{ppfigs_f027}&
-\includegraphics[width=0.223\textwidth]{ppfigs_f028}&
-\includegraphics[width=0.223\textwidth]{ppfigs_f029}&
-\includegraphics[width=0.223\textwidth]{ppfigs_f030}
+\begin{tabular}{@{\hspace*{-0.0\textwidth}}l@{\hspace*{-0.0\textwidth}}l@{\hspace*{-0.0\textwidth}}l@{\hspace*{-0.0\textwidth}}l@{\hspace*{-0.0\textwidth}}l@{\hspace*{-0.0\textwidth}}}
+\includegraphics[width=0.2\textwidth]{ppfigs_f001}&
+\includegraphics[width=0.2\textwidth]{ppfigs_f002}&
+\includegraphics[width=0.2\textwidth]{ppfigs_f003}&
+\includegraphics[width=0.2\textwidth]{ppfigs_f004}&
+\includegraphics[width=0.2\textwidth]{ppfigs_f005}\\
+\includegraphics[width=0.2\textwidth]{ppfigs_f006}&
+\includegraphics[width=0.2\textwidth]{ppfigs_f007}&
+\includegraphics[width=0.2\textwidth]{ppfigs_f008}&
+\includegraphics[width=0.2\textwidth]{ppfigs_f009}&
+\includegraphics[width=0.2\textwidth]{ppfigs_f010}\\
+\includegraphics[width=0.2\textwidth]{ppfigs_f011}&
+\includegraphics[width=0.2\textwidth]{ppfigs_f012}&
+\includegraphics[width=0.2\textwidth]{ppfigs_f013}&
+\includegraphics[width=0.2\textwidth]{ppfigs_f014}&
+\includegraphics[width=0.2\textwidth]{ppfigs_f015}\\
+\includegraphics[width=0.2\textwidth]{ppfigs_f016}&
+\includegraphics[width=0.2\textwidth]{ppfigs_f017}&
+\includegraphics[width=0.2\textwidth]{ppfigs_f018}&
+\includegraphics[width=0.2\textwidth]{ppfigs_f019}&
+\includegraphics[width=0.2\textwidth]{ppfigs_f020}\\
+\includegraphics[width=0.2\textwidth]{ppfigs_f021}&
+\includegraphics[width=0.2\textwidth]{ppfigs_f022}&
+\includegraphics[width=0.2\textwidth]{ppfigs_f023}&
+\includegraphics[width=0.2\textwidth]{ppfigs_f024}&
+\includegraphics[width=0.2\textwidth]{ppfigs_f025}\\
+\includegraphics[width=0.2\textwidth]{ppfigs_f026}&
+\includegraphics[width=0.2\textwidth]{ppfigs_f027}&
+\includegraphics[width=0.2\textwidth]{ppfigs_f028}&
+\includegraphics[width=0.2\textwidth]{ppfigs_f029}&
+\includegraphics[width=0.2\textwidth]{ppfigs_f030}
 \end{tabular}
 \vspace{-3ex}
 \caption[Expected running time divided by dimension
@@ -767,32 +767,32 @@ The following pages present additional results that do not fit into the actual p
 \end{figure*}
 
 \begin{figure*}
-\begin{tabular}{@{\hspace*{-0.018\textwidth}}l@{\hspace*{-0.02\textwidth}}l@{\hspace*{-0.02\textwidth}}l@{\hspace*{-0.02\textwidth}}l@{\hspace*{-0.02\textwidth}}l@{\hspace*{-0.02\textwidth}}}
-\includegraphics[width=0.223\textwidth]{ppfigs_f031}&
-\includegraphics[width=0.223\textwidth]{ppfigs_f032}&
-\includegraphics[width=0.223\textwidth]{ppfigs_f033}&
-\includegraphics[width=0.223\textwidth]{ppfigs_f034}&
-\includegraphics[width=0.223\textwidth]{ppfigs_f035}\\[-1.8ex]
-\includegraphics[width=0.223\textwidth]{ppfigs_f036}&
-\includegraphics[width=0.223\textwidth]{ppfigs_f037}&
-\includegraphics[width=0.223\textwidth]{ppfigs_f038}&
-\includegraphics[width=0.223\textwidth]{ppfigs_f039}&
-\includegraphics[width=0.223\textwidth]{ppfigs_f040}\\[-1.8ex]
-\includegraphics[width=0.223\textwidth]{ppfigs_f041}&
-\includegraphics[width=0.223\textwidth]{ppfigs_f042}&
-\includegraphics[width=0.223\textwidth]{ppfigs_f043}&
-\includegraphics[width=0.223\textwidth]{ppfigs_f044}&
-\includegraphics[width=0.223\textwidth]{ppfigs_f045}\\[-1.8ex]
-\includegraphics[width=0.223\textwidth]{ppfigs_f046}&
-\includegraphics[width=0.223\textwidth]{ppfigs_f047}&
-\includegraphics[width=0.223\textwidth]{ppfigs_f048}&
-\includegraphics[width=0.223\textwidth]{ppfigs_f049}&
-\includegraphics[width=0.223\textwidth]{ppfigs_f050}\\[-1.8ex]
-\includegraphics[width=0.223\textwidth]{ppfigs_f051}&
-\includegraphics[width=0.223\textwidth]{ppfigs_f052}&
-\includegraphics[width=0.223\textwidth]{ppfigs_f053}&
-\includegraphics[width=0.223\textwidth]{ppfigs_f054}&
-\includegraphics[width=0.223\textwidth]{ppfigs_f055}
+\begin{tabular}{@{\hspace*{-0.0\textwidth}}l@{\hspace*{-0.0\textwidth}}l@{\hspace*{-0.0\textwidth}}l@{\hspace*{-0.0\textwidth}}l@{\hspace*{-0.0\textwidth}}l@{\hspace*{-0.0\textwidth}}}
+\includegraphics[width=0.2\textwidth]{ppfigs_f031}&
+\includegraphics[width=0.2\textwidth]{ppfigs_f032}&
+\includegraphics[width=0.2\textwidth]{ppfigs_f033}&
+\includegraphics[width=0.2\textwidth]{ppfigs_f034}&
+\includegraphics[width=0.2\textwidth]{ppfigs_f035}\\
+\includegraphics[width=0.2\textwidth]{ppfigs_f036}&
+\includegraphics[width=0.2\textwidth]{ppfigs_f037}&
+\includegraphics[width=0.2\textwidth]{ppfigs_f038}&
+\includegraphics[width=0.2\textwidth]{ppfigs_f039}&
+\includegraphics[width=0.2\textwidth]{ppfigs_f040}\\
+\includegraphics[width=0.2\textwidth]{ppfigs_f041}&
+\includegraphics[width=0.2\textwidth]{ppfigs_f042}&
+\includegraphics[width=0.2\textwidth]{ppfigs_f043}&
+\includegraphics[width=0.2\textwidth]{ppfigs_f044}&
+\includegraphics[width=0.2\textwidth]{ppfigs_f045}\\
+\includegraphics[width=0.2\textwidth]{ppfigs_f046}&
+\includegraphics[width=0.2\textwidth]{ppfigs_f047}&
+\includegraphics[width=0.2\textwidth]{ppfigs_f048}&
+\includegraphics[width=0.2\textwidth]{ppfigs_f049}&
+\includegraphics[width=0.2\textwidth]{ppfigs_f050}\\
+\includegraphics[width=0.2\textwidth]{ppfigs_f051}&
+\includegraphics[width=0.2\textwidth]{ppfigs_f052}&
+\includegraphics[width=0.2\textwidth]{ppfigs_f053}&
+\includegraphics[width=0.2\textwidth]{ppfigs_f054}&
+\includegraphics[width=0.2\textwidth]{ppfigs_f055}
 \end{tabular}
 \vspace{-3ex}
 \caption[Expected running time divided by dimension
@@ -818,36 +818,36 @@ The following pages present additional results that do not fit into the actual p
 \begin{figure*}
 \centering
 \begin{tabular}{*{5}{@{}c@{}}}
-    \includegraphics[width=0.20\textwidth, trim= 20mm 1mm 32mm 10mm, clip]{ppscatter_f001}&
-    \includegraphics[width=0.20\textwidth, trim= 20mm 1mm 32mm 10mm, clip]{ppscatter_f002}&
-    \includegraphics[width=0.20\textwidth, trim= 20mm 1mm 32mm 10mm, clip]{ppscatter_f003}& 
-    \includegraphics[width=0.20\textwidth, trim= 20mm 1mm 32mm 10mm, clip]{ppscatter_f004}&
-    \includegraphics[width=0.20\textwidth, trim= 20mm 1mm 32mm 10mm, clip]{ppscatter_f005}\\[-2.2ex]
-    \includegraphics[width=0.20\textwidth, trim= 20mm 1mm 32mm 10mm, clip]{ppscatter_f006}&
-    \includegraphics[width=0.20\textwidth, trim= 20mm 1mm 32mm 10mm, clip]{ppscatter_f007}&
-    \includegraphics[width=0.20\textwidth, trim= 20mm 1mm 32mm 10mm, clip]{ppscatter_f008}&
-    \includegraphics[width=0.20\textwidth, trim= 20mm 1mm 32mm 10mm, clip]{ppscatter_f009}&
-    \includegraphics[width=0.20\textwidth, trim= 20mm 1mm 32mm 10mm, clip]{ppscatter_f010}\\[-2.2ex]
-    \includegraphics[width=0.20\textwidth, trim= 20mm 1mm 32mm 10mm, clip]{ppscatter_f011}&
-    \includegraphics[width=0.20\textwidth, trim= 20mm 1mm 32mm 10mm, clip]{ppscatter_f012}&
-    \includegraphics[width=0.20\textwidth, trim= 20mm 1mm 32mm 10mm, clip]{ppscatter_f013}&
-    \includegraphics[width=0.20\textwidth, trim= 20mm 1mm 32mm 10mm, clip]{ppscatter_f014}&
-    \includegraphics[width=0.20\textwidth, trim= 20mm 1mm 32mm 10mm, clip]{ppscatter_f015}\\[-2.2ex]
-    \includegraphics[width=0.20\textwidth, trim= 20mm 1mm 32mm 10mm, clip]{ppscatter_f016}&
-    \includegraphics[width=0.20\textwidth, trim= 20mm 1mm 32mm 10mm, clip]{ppscatter_f017}&
-    \includegraphics[width=0.20\textwidth, trim= 20mm 1mm 32mm 10mm, clip]{ppscatter_f018}&
-    \includegraphics[width=0.20\textwidth, trim= 20mm 1mm 32mm 10mm, clip]{ppscatter_f019}&
-    \includegraphics[width=0.20\textwidth, trim= 20mm 1mm 32mm 10mm, clip]{ppscatter_f020}\\[-2.2ex]
-    \includegraphics[width=0.20\textwidth, trim= 20mm 1mm 32mm 10mm, clip]{ppscatter_f021}&
-    \includegraphics[width=0.20\textwidth, trim= 20mm 1mm 32mm 10mm, clip]{ppscatter_f022}&
-    \includegraphics[width=0.20\textwidth, trim= 20mm 1mm 32mm 10mm, clip]{ppscatter_f023}&
-    \includegraphics[width=0.20\textwidth, trim= 20mm 1mm 32mm 10mm, clip]{ppscatter_f024}&
-		\includegraphics[width=0.20\textwidth, trim= 20mm 1mm 32mm 10mm, clip]{ppscatter_f025}\\[-2.2ex]
-		\includegraphics[width=0.20\textwidth, trim= 20mm 1mm 32mm 10mm, clip]{ppscatter_f026}&
-    \includegraphics[width=0.20\textwidth, trim= 20mm 1mm 32mm 10mm, clip]{ppscatter_f027}&
-    \includegraphics[width=0.20\textwidth, trim= 20mm 1mm 32mm 10mm, clip]{ppscatter_f028}&
-    \includegraphics[width=0.20\textwidth, trim= 20mm 1mm 32mm 10mm, clip]{ppscatter_f029}&
-		\includegraphics[width=0.20\textwidth, trim= 20mm 1mm 32mm 10mm, clip]{ppscatter_f030}
+    \includegraphics[width=0.20\textwidth]{ppscatter_f001}&
+    \includegraphics[width=0.20\textwidth]{ppscatter_f002}&
+    \includegraphics[width=0.20\textwidth]{ppscatter_f003}& 
+    \includegraphics[width=0.20\textwidth]{ppscatter_f004}&
+    \includegraphics[width=0.20\textwidth]{ppscatter_f005}\\
+    \includegraphics[width=0.20\textwidth]{ppscatter_f006}&
+    \includegraphics[width=0.20\textwidth]{ppscatter_f007}&
+    \includegraphics[width=0.20\textwidth]{ppscatter_f008}&
+    \includegraphics[width=0.20\textwidth]{ppscatter_f009}&
+    \includegraphics[width=0.20\textwidth]{ppscatter_f010}\\
+    \includegraphics[width=0.20\textwidth]{ppscatter_f011}&
+    \includegraphics[width=0.20\textwidth]{ppscatter_f012}&
+    \includegraphics[width=0.20\textwidth]{ppscatter_f013}&
+    \includegraphics[width=0.20\textwidth]{ppscatter_f014}&
+    \includegraphics[width=0.20\textwidth]{ppscatter_f015}\\
+    \includegraphics[width=0.20\textwidth]{ppscatter_f016}&
+    \includegraphics[width=0.20\textwidth]{ppscatter_f017}&
+    \includegraphics[width=0.20\textwidth]{ppscatter_f018}&
+    \includegraphics[width=0.20\textwidth]{ppscatter_f019}&
+    \includegraphics[width=0.20\textwidth]{ppscatter_f020}\\
+    \includegraphics[width=0.20\textwidth]{ppscatter_f021}&
+    \includegraphics[width=0.20\textwidth]{ppscatter_f022}&
+    \includegraphics[width=0.20\textwidth]{ppscatter_f023}&
+    \includegraphics[width=0.20\textwidth]{ppscatter_f024}&
+		\includegraphics[width=0.20\textwidth]{ppscatter_f025}\\
+		\includegraphics[width=0.20\textwidth]{ppscatter_f026}&
+    \includegraphics[width=0.20\textwidth]{ppscatter_f027}&
+    \includegraphics[width=0.20\textwidth]{ppscatter_f028}&
+    \includegraphics[width=0.20\textwidth]{ppscatter_f029}&
+		\includegraphics[width=0.20\textwidth]{ppscatter_f030}
 \end{tabular}
 \caption{\label{fig:scatterplots}
 \bbobppscatterlegend{$f_1$--$f_{30}$}
@@ -857,31 +857,31 @@ The following pages present additional results that do not fit into the actual p
 \begin{figure*}
 \centering
 \begin{tabular}{*{5}{@{}c@{}}}
-    \includegraphics[width=0.20\textwidth, trim= 20mm 1mm 32mm 10mm, clip]{ppscatter_f031}&
-    \includegraphics[width=0.20\textwidth, trim= 20mm 1mm 32mm 10mm, clip]{ppscatter_f032}&
-    \includegraphics[width=0.20\textwidth, trim= 20mm 1mm 32mm 10mm, clip]{ppscatter_f033}& 
-    \includegraphics[width=0.20\textwidth, trim= 20mm 1mm 32mm 10mm, clip]{ppscatter_f034}&
-    \includegraphics[width=0.20\textwidth, trim= 20mm 1mm 32mm 10mm, clip]{ppscatter_f035}\\[-2.2ex]
-    \includegraphics[width=0.20\textwidth, trim= 20mm 1mm 32mm 10mm, clip]{ppscatter_f036}&
-    \includegraphics[width=0.20\textwidth, trim= 20mm 1mm 32mm 10mm, clip]{ppscatter_f037}&
-    \includegraphics[width=0.20\textwidth, trim= 20mm 1mm 32mm 10mm, clip]{ppscatter_f038}&
-    \includegraphics[width=0.20\textwidth, trim= 20mm 1mm 32mm 10mm, clip]{ppscatter_f039}&
-    \includegraphics[width=0.20\textwidth, trim= 20mm 1mm 32mm 10mm, clip]{ppscatter_f040}\\[-2.2ex]
-    \includegraphics[width=0.20\textwidth, trim= 20mm 1mm 32mm 10mm, clip]{ppscatter_f041}&
-    \includegraphics[width=0.20\textwidth, trim= 20mm 1mm 32mm 10mm, clip]{ppscatter_f042}&
-    \includegraphics[width=0.20\textwidth, trim= 20mm 1mm 32mm 10mm, clip]{ppscatter_f043}&
-    \includegraphics[width=0.20\textwidth, trim= 20mm 1mm 32mm 10mm, clip]{ppscatter_f044}&
-    \includegraphics[width=0.20\textwidth, trim= 20mm 1mm 32mm 10mm, clip]{ppscatter_f045}\\[-2.2ex]
-    \includegraphics[width=0.20\textwidth, trim= 20mm 1mm 32mm 10mm, clip]{ppscatter_f046}&
-    \includegraphics[width=0.20\textwidth, trim= 20mm 1mm 32mm 10mm, clip]{ppscatter_f047}&
-    \includegraphics[width=0.20\textwidth, trim= 20mm 1mm 32mm 10mm, clip]{ppscatter_f048}&
-    \includegraphics[width=0.20\textwidth, trim= 20mm 1mm 32mm 10mm, clip]{ppscatter_f049}&
-    \includegraphics[width=0.20\textwidth, trim= 20mm 1mm 32mm 10mm, clip]{ppscatter_f050}\\[-2.2ex]
-    \includegraphics[width=0.20\textwidth, trim= 20mm 1mm 32mm 10mm, clip]{ppscatter_f051}&
-    \includegraphics[width=0.20\textwidth, trim= 20mm 1mm 32mm 10mm, clip]{ppscatter_f052}&
-    \includegraphics[width=0.20\textwidth, trim= 20mm 1mm 32mm 10mm, clip]{ppscatter_f053}&
-    \includegraphics[width=0.20\textwidth, trim= 20mm 1mm 32mm 10mm, clip]{ppscatter_f054}&
-		\includegraphics[width=0.20\textwidth, trim= 20mm 1mm 32mm 10mm, clip]{ppscatter_f055}
+    \includegraphics[width=0.20\textwidth]{ppscatter_f031}&
+    \includegraphics[width=0.20\textwidth]{ppscatter_f032}&
+    \includegraphics[width=0.20\textwidth]{ppscatter_f033}& 
+    \includegraphics[width=0.20\textwidth]{ppscatter_f034}&
+    \includegraphics[width=0.20\textwidth]{ppscatter_f035}\\
+    \includegraphics[width=0.20\textwidth]{ppscatter_f036}&
+    \includegraphics[width=0.20\textwidth]{ppscatter_f037}&
+    \includegraphics[width=0.20\textwidth]{ppscatter_f038}&
+    \includegraphics[width=0.20\textwidth]{ppscatter_f039}&
+    \includegraphics[width=0.20\textwidth]{ppscatter_f040}\\
+    \includegraphics[width=0.20\textwidth]{ppscatter_f041}&
+    \includegraphics[width=0.20\textwidth]{ppscatter_f042}&
+    \includegraphics[width=0.20\textwidth]{ppscatter_f043}&
+    \includegraphics[width=0.20\textwidth]{ppscatter_f044}&
+    \includegraphics[width=0.20\textwidth]{ppscatter_f045}\\
+    \includegraphics[width=0.20\textwidth]{ppscatter_f046}&
+    \includegraphics[width=0.20\textwidth]{ppscatter_f047}&
+    \includegraphics[width=0.20\textwidth]{ppscatter_f048}&
+    \includegraphics[width=0.20\textwidth]{ppscatter_f049}&
+    \includegraphics[width=0.20\textwidth]{ppscatter_f050}\\
+    \includegraphics[width=0.20\textwidth]{ppscatter_f051}&
+    \includegraphics[width=0.20\textwidth]{ppscatter_f052}&
+    \includegraphics[width=0.20\textwidth]{ppscatter_f053}&
+    \includegraphics[width=0.20\textwidth]{ppscatter_f054}&
+		\includegraphics[width=0.20\textwidth]{ppscatter_f055}
 \end{tabular}
 \caption{\label{fig:scatterplots}
 \bbobppscatterlegend{$f_{31}$--$f_{55}$}
