--- a/AUTHORS
+++ b/AUTHORS
@@ -4,12 +4,14 @@ Contributors to NumBBO/CoCO have been
 - Youhei Akimoto
 - Asma Atamna (2)
 - Anne Auger (2)
+- Umut Batu (2)
 - Bernd Bischl
 - Dimo Brockhoff (3)
 - Alexandre Chotard
 - Steffen Finck
 - Nikolaus Hansen (3)
 - Verena Heidrich-Meisner
+- Filip Matzner
 - Olaf Mersmann (3)
 - Petr Posik
 - Mike Preuss
